# skyscapes

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.md
src/skyscapes/: __init__.py  datasets.py  loaders.py  planet.py  system.py
src/skyscapes/_legacy/: __init__.py  disk.py  loaders.py  star.py
src/skyscapes/atmosphere/: __init__.py  base.py  grid.py  lambertian.py  parametric.py
src/skyscapes/disk/: __init__.py  base.py  exovista.py  parametric.py  uniform.py
src/skyscapes/io/: __init__.py  exovista.py
src/skyscapes/scene/: __init__.py  planet.py  star.py  system.py
tests/: conftest.py  test_atmosphere_grid.py  test_atmosphere_lambertian.py  test_atmosphere_parametric.py  test_datasets.py  test_disk.py  test_io_exovista.py  test_scene_planet.py  test_scene_star.py  test_scene_system.py  test_skyscapes.py
tests/parity/: conftest.py  test_parity_disk_flux.py  test_parity_planet_contrast.py  test_parity_planet_contrast_vs_beta.py  test_parity_planet_position.py  test_parity_star_flux.py  test_parity_system_forward.py
