[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "skyscapes"
description = "Astrophysical scene modeling for HWO direct imaging"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["hwoutils", "jax>=0.8.1", "jaxlib>=0.8.1", "optixstuff", "pooch"]
[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "sphinx_autodoc_typehints",
    "ipython",
    "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov", "orbix"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/skyscapes"
Issues = "https://github.com/CoreySpohn/skyscapes/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/skyscapes/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/skyscapes"]

[tool.hatch.build.targets.sdist]
exclude = ["/scripts", "/docs", "/tests", "/.github"]
